zabbix-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zabbix-web-ingress
  namespace: zabbix
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: zabbix.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zabbix-web-service
            port:
              number: 80
